# autopilot

./: .gitignore  Cargo.toml  README.md
conf/: sim-mock.yaml  xplane11.yaml
src/: avionics.rs  bus.rs  flight_ctrl.rs  gui.rs  main.rs  providers.rs  sensors.rs
src/avionics/: adc.rs  autopilot.rs
src/gui/: altitude_indicator.rs  ap_panel.rs  attitude_indicator.rs  common.rs  constants.rs  gui_utils.rs  heading_indicator.rs  pfd.rs  speed_indicator.rs
src/providers/: sim_mock_provider.rs  udp_fragment.txt  xpln11_provider.rs
src/providers/xpln11_provider/: constants.rs
src/sensors/: xpln11_provider.rs
