[package]
name = "autopilot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
egui = { version = "0.23.0", features = ["default_fonts"] }
eframe = "0.23.0"
num-traits = "0.2"
num-derive = "0.2"
rust_math = "0.3.7"
